--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ DATABASE_URL=mongodb+srv://admin:admin123@crypto.smvzhxz.mongodb.net/?retryWrite
 APIKEY=d0868f6eadmsh0bf67062943085ap143796jsn7d65a2d74f81
 BASEURL=https://latest-stock-price.p.rapidapi.com
 HOSTKEY=latest-stock-price.p.rapidapi.com
+APIKEY=Y5N3P4UYE2HHGK87AF6S4DENA3UJ4716PU
+
